[tool.poetry]
name = "coolapp"
version = "0.1.0"
description = ""
authors = ["Rupesh Sreeraman <exmplayer.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cx-freeze = "^7.2.7"
ruff = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
